# stable-name-eq

./: ChangeLog.md  LICENSE  default.nix  play.hs  stable-name-eq.cabal
bench/: bench.hs
src/Data/Deriving/: Internal.hs
src/Data/Eq/: StableName.hs
src/Data/Eq/StableName/: Class.hs  Instances.hs  TH.hs
