name:                stable-name-eq
version:             0.0.0.0
synopsis:            Eq-like class that uses StableNames for fast equality checking
homepage:            https://github.com/basvandijk/stable-name-eq
license:             BSD3
license-file:        LICENSE
author:              Bas van Dijk
maintainer:          v.dijk.bas@gmail.com
copyright:           Bas van Dijk
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Eq.StableName
                     , Data.Eq.StableName.Class
                     , Data.Eq.StableName.Instances
                     , Data.Eq.StableName.TH
  other-modules:       Data.Deriving.Internal
  build-depends:       base >= 4 && < 5, ghc-prim, template-haskell, th-abstraction, containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable play
  main-is: play.hs
  build-depends:       base >= 4 && < 5, stable-name-eq
  default-language:    Haskell2010
